--- a/res/layout/xmpp_preference.xml
+++ b/res/layout/xmpp_preference.xml
@@ -3,5 +3,5 @@
 <Button xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/button"
         android:layout_width="wrap_content"
-        android:text="Setup XMPP..."
+        android:text="@string/SetupXMPP"
         android:layout_height="wrap_content"/>
