--- a/res/values-ru/arrays.xml
+++ b/res/values-ru/arrays.xml
@@ -24,6 +24,7 @@
         <item>fastun.com (нужна авторизация!) = JPG компрессия</item>
         <item>images.weserv.nl = уменьшение</item>
         <item>Два прокси подряд (нужна авторизация!)</item>
+        <item>JuickAdv - лучший</item>
     </string-array>
 
     <string-array name="prefsThemesTitles">
