--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -53,6 +53,7 @@
         <item>fastun.com (auth needed!) = JPG compression</item>
         <item>images.weserv.nl = resizing</item>
         <item>2 above combined (auth needed!)</item>
+        <item>JuickAdv proxy = best</item>
     </string-array>
     <string-array name="imageLoadModeValues">
         <item>off</item>
@@ -60,6 +61,7 @@
         <item>fastun</item>
         <item>weserv</item>
         <item>fastunweserv</item>
+        <item>japroxy</item>
     </string-array>
     <string-array name="imageHeight">
         <item>20 percent</item>
