--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -129,6 +129,12 @@
             android:defaultValue="-1"
             android:persistent="true"/>
         <CheckBoxPreference
+                android:key="http_compression"
+                android:title="@string/EnableHttpCompression"
+                android:summary="@string/CompressionSlowsDown"
+                android:defaultValue="false"
+                android:persistent="true"/>
+        <CheckBoxPreference
                 android:key="enableMessageDB"
                 android:title="@string/EnableLocalStorage"
                 android:summary="@string/ForBetterLife"
