xmpp messages via broadcast; beginning jubo rss; preference for changing anon usage sending

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -136,4 +136,14 @@
         <item>5</item>
         <item>10</item>
     </string-array>
+    <string-array name="usageStatistics">
+        <item>send</item>
+        <item>send_wifi</item>
+        <item>no</item>
+    </string-array>
+    <string-array name="usageStatisticsLabels">
+        <item>Send</item>
+        <item>Send over wireless only</item>
+        <item>Do not send</item>
+    </string-array>
 </resources>
