--- a/res/values-ru/arrays.xml
+++ b/res/values-ru/arrays.xml
@@ -45,11 +45,10 @@
         <item>Не-не-не, не надо.</item>
     </string-array>
 
-    <string-array name="activateUsageStatisticsValues">
-        <item>send</item>
-        <item>send_wifi</item>
-        <item>once</item>
-        <item>never</item>
+    <string-array name="usageStatisticsLabels">
+        <item>Отправлять</item>
+        <item>Только через Wi-Fi</item>
+        <item>Не отправлять</item>
     </string-array>
 
 </resources>
