--- a/res/layout/thread.xml
+++ b/res/layout/thread.xml
@@ -3,6 +3,14 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical">
+    <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/gotoMain"
+            android:text="@string/AllMessages"
+            android:visibility="gone"
+            />
+
     <FrameLayout
         android:id="@+id/threadfragment"
         android:layout_width="fill_parent"
