--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -281,6 +281,11 @@
             android:defaultValue="0xFFC8934E"
             android:persistent="true"/>
         <yuku.ambilwarna.widget.AmbilWarnaPreference
+            android:key="Colors.USERNAME_ME"
+            android:title="@string/YourUsername"
+            android:defaultValue="0xFF938e00"
+            android:persistent="true"/>
+        <yuku.ambilwarna.widget.AmbilWarnaPreference
             android:key="Colors.USERNAME_READ"
             android:title="@string/UserNamesRead"
             android:defaultValue="0xFFc84e4e"
