--- a/res/layout/incoming_messages_private.xml
+++ b/res/layout/incoming_messages_private.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.juick.android.PressableLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -18,4 +18,4 @@
         android:singleLine="true"
         android:text="Morraz will prevail!"
         />
-</LinearLayout>
+</com.juick.android.PressableLinearLayout>
