--- a/res/layout/incoming_messages_threads.xml
+++ b/res/layout/incoming_messages_threads.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.juick.android.PressableLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -27,4 +27,4 @@
         android:singleLine="true"
         android:text="4 new comments from @zorro, @morro"
         />
-</LinearLayout>
+</com.juick.android.PressableLinearLayout>
