--- a/res/layout/incoming_messages.xml
+++ b/res/layout/incoming_messages.xml
@@ -2,6 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
+    <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/gotoMain"
+            android:text="@string/AllMessages"
+            android:visibility="gone"
+            />
     <com.juick.android.MyListView
         android:id="@+id/list"
         android:layout_width="fill_parent"
