--- a/res/layout/xmpp_setup.xml
+++ b/res/layout/xmpp_setup.xml
@@ -1,14 +1,14 @@
 <ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
-                     android:layout_width="fill_parent"
-                     android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         >
     <TableLayout
 
-                 android:layout_width="fill_parent"
-                 android:layout_height="wrap_content"
-                 android:background="#FFFFFF"
-                 android:orientation="vertical">
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="#FFFFFF"
+            android:orientation="vertical">
         <TableRow android:layout_width="fill_parent"
                 >
             <TextView
@@ -20,12 +20,9 @@
             <Spinner
                     android:id="@+id/template_selection"
                     android:layout_width="fill_parent"
-                    android:layout_height="38dp"
+                    android:layout_height="wrap_content"
                     android:paddingRight="10dp"
                     android:paddingLeft="10dp"
-                    android:paddingTop="0dp"
-                    android:paddingBottom="0dp"
-                    android:textSize="20dp"
                     android:entries="@array/xmppTemplate"
                     />
         </TableRow>
@@ -35,16 +32,13 @@
                     android:layout_height="wrap_content"
                     android:gravity="right"
                     android:paddingRight="5sp"
-                    android:text="Login:"/>
+                    android:text="JID:"/>
             <EditText
-                    android:id="@+id/login"
+                    android:id="@+id/jid"
                     android:paddingRight="10dp"
                     android:paddingLeft="10dp"
-                    android:paddingTop="0dp"
-                    android:paddingBottom="0dp"
-                    android:layout_width="wrap_content"
-                    android:textSize="20dp"
-                    android:layout_height="32dp"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
                     android:hint="@string/LeftPartOf_"
                     />
         </TableRow>
@@ -57,35 +51,13 @@
                     android:text="Password:"/>
             <EditText
                     android:id="@+id/password"
-                    android:minWidth="150dip"
                     android:password="true"
-                    android:layout_width="wrap_content"
-                    android:paddingRight="10dp"
-                    android:paddingLeft="10dp"
-                    android:paddingTop="0dp"
-                    android:paddingBottom="0dp"
-                    android:textSize="20dp"
-                    android:layout_height="32dp"
-                    />
-        </TableRow>
-        <TableRow android:layout_width="fill_parent">
-            <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:paddingRight="5sp"
-                    android:gravity="right"
-                    android:hint="@string/RightPartOf_"
-                    android:text="Service:"/>
-            <EditText
-                    android:id="@+id/service"
-                    android:minWidth="150dip"
-                    android:layout_width="wrap_content"
                     android:paddingRight="10dp"
                     android:paddingLeft="10dp"
                     android:paddingTop="0dp"
                     android:paddingBottom="0dp"
-                    android:textSize="20dp"
-                    android:layout_height="32dp"
                     />
         </TableRow>
         <TableRow>
@@ -98,14 +70,10 @@
             <EditText
                     android:id="@+id/server"
                     android:text="jabber.ru"
-                    android:minWidth="150dip"
-                    android:layout_width="wrap_content"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
                     android:paddingRight="10dp"
                     android:paddingLeft="10dp"
-                    android:paddingTop="0dp"
-                    android:paddingBottom="0dp"
-                    android:textSize="20dp"
-                    android:layout_height="32dp"
                     />
         </TableRow>
         <TableRow>
@@ -115,40 +83,31 @@
                     android:layout_height="wrap_content"
                     android:gravity="right"
                     android:text="Port:"/>
-            <LinearLayout
+            <EditText
+                    android:id="@+id/port"
+                    android:text="5222"
+                    android:inputType="numberDecimal"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingRight="10dp"
+                    android:paddingLeft="10dp"
+                    />
+        </TableRow>
+        <TableRow>
+            <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    >
-                <EditText
-                        android:id="@+id/port"
-                        android:text="5222"
-                        android:inputType="numberDecimal"
-                        android:layout_width="wrap_content"
-                        android:paddingRight="10dp"
-                        android:paddingLeft="10dp"
-                        android:paddingTop="0dp"
-                        android:paddingBottom="0dp"
-                        android:textSize="20dp"
-                        android:layout_height="32dp"
-                        />
-                <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="right"
-                        android:paddingRight="5sp"
-                        android:paddingLeft="15sp"
-                        android:text="Secure:"/>
-                <CheckBox
-                        android:id="@+id/secure"
-                        android:layout_width="wrap_content"
-                        android:paddingRight="10dp"
-                        android:paddingLeft="10dp"
-                        android:paddingTop="0dp"
-                        android:paddingBottom="0dp"
-                        android:textSize="20dp"
-                        android:layout_height="32dp"
-                        />
-            </LinearLayout>
+                    android:gravity="right"
+                    android:paddingRight="5sp"
+                    android:paddingLeft="15sp"
+                    android:text="Secure:"/>
+            <CheckBox
+                    android:id="@+id/secure"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingRight="10dp"
+                    android:paddingLeft="10dp"
+                    />
         </TableRow>
         <TableRow>
             <TextView
@@ -160,15 +119,11 @@
             <EditText
                     android:id="@+id/priority"
                     android:text="55"
-                    android:minWidth="50dip"
                     android:inputType="numberDecimal"
-                    android:layout_width="wrap_content"
                     android:paddingRight="10dp"
                     android:paddingLeft="10dp"
-                    android:paddingTop="0dp"
-                    android:paddingBottom="0dp"
-                    android:textSize="20dp"
-                    android:layout_height="32dp"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
                     />
         </TableRow>
         <TableRow>
@@ -181,14 +136,11 @@
             <EditText
                     android:id="@+id/resource"
                     android:text="com.juickadvanced"
-                    android:minWidth="150dip"
-                    android:layout_width="wrap_content"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
                     android:textSize="20dp"
                     android:paddingRight="10dp"
                     android:paddingLeft="10dp"
-                    android:paddingTop="0dp"
-                    android:paddingBottom="0dp"
-                    android:layout_height="32dp"
                     />
         </TableRow>
         <TableRow>
@@ -214,7 +166,20 @@
                         android:layout_marginTop="20sp"
                         android:text="@string/ReadThis"/>
 
-                    </LinearLayout>
+            </LinearLayout>
+        </TableRow>
+        <TableRow>
+            <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    >
+            </LinearLayout>
+            <Button
+                    android:id="@+id/okbutton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20sp"
+                    android:text="@android:string/ok"/>
         </TableRow>
     </TableLayout>
 </ScrollView>
